--- a/templates/questions.html
+++ b/templates/questions.html
@@ -6,16 +6,16 @@
 
   <h1 class="pt-4 mb-3 text-center">Madlibs!</h1>
 
-  <form action="story" class="pb-4">
+  <form action="/story" class="pb-4">
 
  {% for word in words %}
     <div class="mb-3 row">
       <label class="col-5 col-form-label text-end">{{ word }}</label>
       <div class="col-7">
         <input
-            name= {{word}}
+            name={{word}}
             required
-            aria-label="noun"
+            aria-label={{word}}
             class="form-control">
       </div>
     </div>
